--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -14,12 +14,14 @@ body {
 }
 
 .nav-link {
-    color: #ffffff;
+    color: #000000;
+    font-weight: bold;
+    font-size: 20px;
 }
 
 /*footer*/
 .footer {
-    padding: 50px 0px 50px;
+    padding: 20px 0px 20px;
 }
 
 .footer .container {
